[package]
name = "qq"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.19"
regex = "1.11"
base64 = "0.22"
dirs = "5.0"
toml = "0.8"
anyhow = "1.0"
